corpus/declaration.txt
==================
declaration
==================

C_TEXT:C284 ($abc;abc;<>abc;$1)
array text($array_1;3)
array text($array_2;$size)

/* blar */
/* blar
 * blar
 * blar
 */

// blar blar blar

---

(source_code 
  (c_type )
  (local_variable 
    (identifier ))
  (argument_separator )
  (identifier )
  (argument_separator )
  (interprocess_variable 
    (identifier ))
  (argument_separator )
  (parameter )
  (array_declaration 
    (array_type )
    (local_variable 
      (identifier ))
    (argument_separator )
    (integer_constant ))
  (array_declaration 
    (array_type )
    (local_variable 
      (identifier ))
    (argument_separator )
    (local_variable 
      (identifier )))
  (comment )
  (comment )
  (comment ))
